--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Style, Comfort, and Sustainability Combined"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/zedin-logo.png" />
     <!--
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <noscript>Style, Comfort, and Sustainability Combined</noscript>
+    <noscript>Javascript needs to be enabled.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
